Fixed cut off page on mobile

--- a/css/styles.less
+++ b/css/styles.less
@@ -196,7 +196,7 @@ ul li .ui-btn {
 	left:0px; 
 	top:0px;
 	right:0px;
-	bottom:0px;
+//	bottom:0px;
 	
 	.style-bold {
 		font-weight: bold;
